# BTCRig

./: .gitattributes  .gitignore  BUILD_LINUX.md  BUILD_LINUX.zh-CN.md  BUILD_WINDOWS.md  BUILD_WINDOWS.zh-CN.md  CMakeLists.txt  PROXY.md  PROXY.zh-CN.md  README.md  README.zh-CN.md  config.json  proxy.json  termux.sh  ubuntu.sh
.github/workflows/: main.yml
src/: btcrig_version.h.in  console.c  console.h  cpu_info.c  cpu_info.h  donation.c  donation.h  main.c  miner.c  miner.h  opencl_miner.c  opencl_miner.h  proxy_main.c  sha256d.c  sha256d.h  sha256d_arm_sha2.c  sha256d_x86_sha_ni.c  stratum.c  stratum.h  stratum_main.c
